Atualização de Informações do Usuário
Permite que o usuário logado altere as informações pessoais e senha de seu perfil.

--- a/pharma-dashboard/admin/configuracoes.html
+++ b/pharma-dashboard/admin/configuracoes.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/dark-mode.css">
 
+    <script src="../js/script.js"></script>
+    <script src="js/configuracoes.js"></script>
+    
 <script>
     (function() {
         const savedTheme = localStorage.getItem('theme');
@@ -50,6 +53,7 @@
             });
     })();
 </script>
+
 </head>
 <body>
     
