--- a/pharma-dashboard/estoque/estoque_medicamento.html
+++ b/pharma-dashboard/estoque/estoque_medicamento.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/dark-mode.css">
-
+    <script src="../js/script.js"></script>
+    <script src="js/estoque-medicamentos.js"></script>
+    
 <script>
     (function() {
         const savedTheme = localStorage.getItem('theme');
