--- a/pharma-dashboard/relatorios/alertas.html
+++ b/pharma-dashboard/relatorios/alertas.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/dark-mode.css">
+    <script src="../js/script.js"></script>
+    <script src="js/alertas.js"></script>
 
 <script>
     (function() {
@@ -159,7 +161,7 @@
                 <h1 class="h2 mb-4">Alertas Operacionais</h1>
 
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6" id="cardValidade">
                         <div class="card shadow-sm mb-4">
                             <div class="card-header">
                                 <h5 class="mb-0 text-danger"><i class="bi bi-calendar-x-fill me-2"></i>Alertas de Validade</h5>
@@ -192,7 +194,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-6" id="cardEstoqueBaixo">
                         <div class="card shadow-sm mb-4">
                             <div class="card-header">
                                 <h5 class="mb-0 text-info"><i class="bi bi-box-seam-fill me-2"></i>Alertas de Estoque Baixo</h5>
