--- a/pharma-dashboard/index.html
+++ b/pharma-dashboard/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/dark-mode.css">
-
+    <script src="js/script.js"></script>
+    <script src="js/index.js"></script>
+    
 <script>
     (function() {
         const savedTheme = localStorage.getItem('theme');
@@ -205,7 +207,7 @@
                                         <th scope="col">Atividade</th>
                                         <th scope="col">Produto</th>
                                         <th scope="col">Data</th>
-                                        <th scope="col">Usuário</th>
+                                        <th scope="col">Responsável</th>
                                     </tr>
                                 </thead>
                                 <tbody>
