--- a/pharma-dashboard/index.html
+++ b/pharma-dashboard/index.html
@@ -79,32 +79,42 @@
                     </a>
                 </li>
                 <hr class="sidebar-divider my-2">
-                <li class="nav-item-title">CADASTROS</li>
+
                 <li class="nav-item">
-                    <a class="nav-link" href="cadastro/medicamentos.html">
-                        <i class="bi bi-plus-circle-fill"></i> Medicamentos
+                    <a class="nav-link collapsed dropdown-toggle" data-bs-toggle="collapse" href="#collapseCadastros" aria-expanded="false" aria-controls="collapseCadastros">
+                        <i class="bi bi-folder-fill"></i> CADASTROS
+                        <i class="bi bi-chevron-down ms-auto" style="font-size: 0.8rem;"></i>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="cadastro/pacientes.html">
-                        <i class="bi bi-person-fill"></i> Pacientes
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="cadastro/laboratorios.html">
-                        <i class="bi bi-building"></i> Laboratórios
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="cadastro/classes_terapeuticas.html">
-                        <i class="bi bi-tags-fill"></i> Classes Terapêuticas
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="cadastro/fornecedores.html">
-                        <i class="bi bi-truck"></i> Fornecedores
-                    </a>
-                </li>
+                <div class="collapse" id="collapseCadastros" data-bs-parent="#sidebar">
+                    <ul class="nav flex-column ps-3"> 
+                        <li class="nav-item">
+                            <a class="nav-link" href="cadastro/medicamentos.html">
+                                <i class="bi bi-plus-circle-fill"></i> Medicamentos
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cadastro/pacientes.html">
+                                <i class="bi bi-person-fill"></i> Pacientes
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cadastro/laboratorios.html">
+                                <i class="bi bi-building"></i> Laboratórios
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cadastro/classes_terapeuticas.html">
+                                <i class="bi bi-tags-fill"></i> Classes Terapêuticas
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cadastro/fornecedores.html">
+                                <i class="bi bi-truck"></i> Fornecedores
+                            </a>
+                        </li>
+                    </ul>
+                </div>
                 <hr class="sidebar-divider my-2">
                 <li class="nav-item-title">RELATÓRIOS</li>
                 <li class="nav-item">
